# advent

./: Pipfile  README.md  custom_types.py  debug.sh  dump.txt  go.sh  guess.sh  main.mustache  main.py  output.txt  pyproject.toml  setup.cfg  start_day.sh  test.sh  test_utils.py  utils.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: labeler.yml
2015/1/: elevator.py  main.py
2015/2/: main.py  original_wrapping_materials.py
2015/3/: main.py  original_deliver_presents.py  test.txt
2015/4/: main.py  original_mine_adventcoins.py  problem.txt
2015/5/: main.py
2015/6/: answers.txt  main.py
2015/day_3/: test.txt
2015/day_x/: solve_problem.py
2016/1/: main.py
2017/1/: guess.sh  solve_captcha.py  spec.txt  test.py
2017/2/: guess.sh  solve.py  spec.txt  test.py
2017/3/: guess.sh  input.txt  print_grid.py  solve.py  spec.txt  test.py
2017/4/: input.txt  solve.py  spec.txt  test.py
2017/5/: solve.py  spec.txt  test.py
2017/6/: input.txt  main.py  spec.txt  test.py  test_count_rebalances.py  test_me.py  test_realloc.py  test_solve.py
2017/7/: main.py  spec.txt  test_me.py
2017/x/: input.txt  solve.py  spec.txt  test.py
2021/1/: main.py
2021/2/: answers.txt  main.py
2022/: debug.sh  go.sh  main.py  utils.py
2022/1/: ai.py  answers.txt  main.py
2022/10/: main.py  problem.txt
2022/11/: main.py  problem.txt
2022/12/: main.py
day_1/: Makefile  elevator.py
day_2/: wrapping_materials.py  wrapping_paper.py
day_3/: deliver_presents.py  test.txt
day_4/: mine_adventcoins.py
pong/: pong.py
(+105 files in other folders)
